@@ -7,7 +7,8 @@ CHANGELOG for Fall of Eden
 
 Version 0.3r
 ------------
-* 
+* New patreon sponsored content by Del:
+ - Kingdom patrol/Bandit encounter on the plains.
 
 --------------------------------------------
              PREVIOUS VERSIONS
